@@ -33,7 +33,12 @@ Serial GC uses genCollectedHeap, which is in gc/share/, some related classes in 
 
 ## Flags
 
+### ParNewGC vs ParallelScavenge
+
+They are both parallel collectors for young gen. ParNewGC works with CMS but ParallelScavenge does not. For other discrepancies between the two, refer to [this post](http://hllvm.group.iteye.com/group/topic/37095).
+
 - -XX:+UseConcMarkSweepGC
+	- -XX:+UseParNewGC is enabled automatically
 
 
 
